[package]
name = "bittensor-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
codec = { workspace = true }
sp-core = { workspace = true }
substrate-api-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
frame-support = { workspace = true }
scale-info = { workspace = true }
subkey = { workspace = true }
sp-runtime = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
bip39 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
sp-application-crypto = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
simplelog = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
subxt = { workspace = true }
