[package]
name = "lightning-tensor"
version = "0.1.0"
edition = "2021"


[dependencies]
bittensor-rs = { path = "../bittensor-rs" }
clap = { workspace = true }
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.27.0"
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
simplelog = { workspace = true }
sp-core = { workspace = true }
dirs.workspace = true
futures.workspace = true
codec.workspace = true
hex.workspace = true
toml = "0.8.15"
fs = "0.0.5"
